# random

./: .gitignore  CMakeLists.txt  README.md
cmake/: RandomConfig.cmake.in
examples/: main.c
include/: random.h
src/: random.c
tests/: test_random.c
